k8s/nginx-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.service.expose: "true"
    kompose.service.type: loadbalancer
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: nginx
    spec:
      containers:
      - image: smilebhai/nginx:latest
        name: nginx
        ports:
        - containerPort: 80
        - containerPort: 443
        resources: {}
      restartPolicy: Always
status: {}
