k8s/sw-practical-kube.yml
# STATUS : INCOMPLETE

kind: Service
apiVersion: v1
metadata:
  name: sw-practical-service
spec:
  type: NodePort
  selector:
    app: sw-practical
  ports:
  - protocol: TCP
    port: 8080
    nodePort: 8080

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sw-practical-deployment
  labels:
    app: sw-practical
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sw-practical
  template:
    metadata:
      labels:
        app: sw-practical
    spec:
      containers:
      - name: sw-practical
        image: $DOCKER_IMAGE_NAME:latest
        ports:
        - containerPort: 8080
