k8s/node-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: node
  name: node
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: node
          servicePort: 3000
status:
  loadBalancer: {}
